--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_feather_icons: ^2.0.0+1
   gap: ^2.0.1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
